[package]
name = "azeroth-vm"
version = "0.1.0"
edition = "2018"
authors = ["Zhang Yu <archerfeel@gmail.com>"]

[dependencies]
regex = "0.2"
zip = "0.3"
log = "0.4"
argparse = "0.2.2"
chashmap = "2.2.0"
base64 = "0.11.0"
libloading = "0.5"
lazy_static = "1.4.0"
azeroth-jni = { package = "azeroth-jni", path = "./jni" }

[lib]
name = "azerothvm"
path = "src/lib.rs"

[[bin]]
name = "java"
path = "src/main.rs"